[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "bonn-shutter"
version = "0.1.0"
description = "Control and integration software for the Bonn shutter mechanism using Python, C, and C++."
readme = "README.md"

requires-python = ">=3.8"

authors = [
    { name="Elijah Anakalea-Buckley", email="elijahab@caltech.edu" },
    { name="Dave Hale", email="dhale@astro.caltech.edu" }
]

license = { text = "MIT" }

keywords = [
  "shutter",
  "instrument-control",
  "hardware",
  "bonn"
]

classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: C",
  "Programming Language :: C++",
  "Operating System :: OS Independent",
  "Topic :: Scientific/Engineering",
  "Topic :: System :: Hardware"
]

dependencies = [
  # Required for the Python control layer
  "hardware_device_base@git+https://github.com/COO-Utilities/hardware_device_base#egg=main",
  "pyserial"
]

[project.urls]
Homepage = "https://github.com/COO-Utilities/bonn_shutter"
Repository = "https://github.com/COO-Utilities/bonn_shutter"
Issues = "https://github.com/COO-Utilities/bonn_shutter/issues"


[project.optional-dependencies]
dev = [
  "pytest",
  "black",
  "flake8"
]
